@@ -2,12 +2,16 @@ package com.telegram.menfess.handler;
 
 import com.telegram.menfess.entity.FileType;
 import com.telegram.menfess.entity.MenfessData;
+import com.telegram.menfess.entity.Messages;
 import com.telegram.menfess.service.MenfessDataService;
+import com.telegram.menfess.service.MessageService;
 import com.telegram.menfess.utils.ButtonConfirmation;
 import com.telegram.menfess.utils.MessageUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.PhotoSize;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.message.Message;
@@ -23,10 +27,14 @@ import java.util.concurrent.CompletableFuture;
 public class SendMenfessCommand implements CommandProcessor {
 
     private static final String CONFIRMATION_MESSAGE = "Apakah Anda Ingin mengirim Pesan Ini?";
-    
+
     private final ButtonConfirmation buttonConfirmation;
     private final MenfessDataService menfessDataService;
     private final MessageUtils messageUtils;
+    private final MessageService messageService;
+
+    @Value("${channel.username}")
+    private String channelUsername;
 
     @Override
     public String commands() {
@@ -37,32 +45,66 @@ public class SendMenfessCommand implements CommandProcessor {
     public CompletableFuture<Void> process(Update update, TelegramClient telegramClient) {
         return CompletableFuture.runAsync(() -> {
             Message message = update.getMessage();
-            logMessageDetails(message);
-
+        
             String messageText = message.hasText() ? message.getText() : "";
-            if (!isValidMessage(messageText)) {
+            if (isGroupMessageWithReply(message)) {
+                handleGroupReply(update, telegramClient);
                 return;
             }
-            messageUtils.process(message.getCaption() != null ? message.getCaption() : message.getText()).ifPresentOrElse(messages -> {
-                MenfessData menfessData = createMenfessData(message);
-                sendConfirmationMessage(message, messages, menfessData, telegramClient);
-            }, () ->  sendMessage(message.getChatId(), "Pesan harus mengandung minimal 3 kata dan memiliki hashtag", telegramClient));
+            if (!isValidMessage(messageText) || !message.isUserMessage()) {
+                return;
+            }
+            processValidMessage(message, telegramClient);
         });
     }
 
-    private void logMessageDetails(Message message) {
-        log.info("Message type debug:");
-        log.info("Message {}", message.getText());
-        log.info("Has Photo: {}", message.hasPhoto());
-        log.info("Has Video: {}", message.hasVideo());
-        log.info("Has Text: {}", message.hasText());
-        if (message.hasPhoto()) {
-            log.info("Photo list size: {}", message.getPhoto().size());
+    private boolean isGroupMessageWithReply(Message message) {
+        return (message.getChat().isGroupChat() || message.getChat().isSuperGroupChat()) && 
+           message.getReplyToMessage() != null && 
+           message.getReplyToMessage().getForwardFromMessageId() != null;
+    }
+
+    private void handleGroupReply(Update update, TelegramClient telegramClient) {
+        Message message = update.getMessage();
+        Integer forwardFromMessageId = message.getReplyToMessage().getForwardFromMessageId();
+        Messages originalMessage = messageService.findByMessageId(forwardFromMessageId);
+    
+        if (originalMessage != null) {
+            log.info("User replied to message ID: {}", message);
+            sendNotificationToUserReplied(
+                originalMessage.getUser().getId(),
+                forwardFromMessageId,
+                message.getMessageId(),
+                telegramClient
+            );
         }
     }
 
+    private void processValidMessage(Message message, TelegramClient telegramClient) {
+        String content = message.getCaption() != null ? message.getCaption() : message.getText();
+    
+        messageUtils.process(content).ifPresentOrElse(
+            messages -> {
+                MenfessData menfessData = createMenfessData(message);
+                sendConfirmationMessage(message, menfessData, telegramClient);
+            }, 
+            () -> sendInvalidMessageError(message.getChatId(), telegramClient)
+        );
+    }
+
+    private void sendInvalidMessageError(long chatId, TelegramClient telegramClient) {
+        String errorMessage = """
+								❌ *Pesan Tidak Valid*
+								
+								Pesan harus mengandung:
+								• Minimal 3 kata
+								• Setidaknya satu hashtag (#)""";
+    
+        sendMessage(chatId, errorMessage, telegramClient);
+    }
+
     private boolean isValidMessage(String messageText) {
-        if (messageText.isEmpty() || !messageText.startsWith("/")) {
+        if (!messageText.startsWith("/")) {
             log.info("Message doesn't start with / or is empty, ignoring");
         }
         return true;
@@ -109,12 +151,13 @@ public class SendMenfessCommand implements CommandProcessor {
     private String getLargestPhotoFileId(List<PhotoSize> photos) {
         return photos.stream()
                 .max(Comparator.comparing(PhotoSize::getFileSize))
-                .orElse(photos.get(0))
+                .orElse(photos.getFirst())
                 .getFileId();
     }
 
-    private void sendConfirmationMessage(Message message, String messageText, 
-                                       MenfessData menfessData, TelegramClient telegramClient) {
+    private void sendConfirmationMessage(Message message,
+                                         MenfessData menfessData, 
+                                         TelegramClient telegramClient) {
         String uuid = menfessDataService.saveDataMenfess(menfessData);
         sendMessageWithMarkup(
                 message.getChatId(),
@@ -122,5 +165,55 @@ public class SendMenfessCommand implements CommandProcessor {
                 buttonConfirmation.confirmSendMenfess(uuid),
                 telegramClient
         );
+    }
+
+    public void sendNotificationToUserReplied(long chatId, 
+                                              Integer messageId, 
+                                              Integer commentId,
+                                              TelegramClient telegramClient) {
+        try {
+            String[] greetings = {
+                    "Psst! 👀",
+                    "Wah! 🌟",
+                    "Halo! 💫",
+                    "Coba tebak? 🎭",
+                    "Kabar menarik! 🔥"
+            };
+
+            String[] reactions = {
+                    "Seseorang menemukan pengakuanmu cukup menarik untuk dibalas!",
+                    "Kiriman anonimmu menarik perhatian seseorang!",
+                    "Pesan rahasiamu baru saja mendapat tanggapan!",
+                    "Pikiranmu telah memicu percakapan!",
+                    "Seseorang baru saja terhubung dengan pesanmu!"
+            };
+
+            String[] callToActions = {
+                    "Penasaran apa yang mereka katakan? Cek sekarang!",
+                    "Jangan menunggu lama - lihat tanggapan mereka sekarang!",
+                    "Kami juga penasaran - coba lihat!",
+                    "Apa yang mereka pikirkan? Cari tahu sekarang!",
+                    "Percakapan berlanjut... ketuk untuk melihat!"
+            };
+
+            String greeting = greetings[(int)(Math.random() * greetings.length)];
+            String reaction = reactions[(int)(Math.random() * reactions.length)];
+            String callToAction = callToActions[(int)(Math.random() * callToActions.length)];
+
+            String notificationText = String.format(
+                    "*%s*\n\n%s\n\n🔗 *Message Link:* https://t.me/%s/%s?comment=%s\n\n%s",
+                    greeting, reaction, channelUsername, messageId, commentId, callToAction);
+
+            SendMessage message = SendMessage.builder()
+                    .chatId(chatId)
+                    .text(notificationText)
+                    .parseMode("Markdown")
+                    .build();
+
+            telegramClient.execute(message);
+        } catch (Exception e) {
+            log.error("Failed to send reply notification", e);
+            throw new RuntimeException(e);
+        }
     }
 }
